--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -240,7 +240,8 @@
 \newcommand{\CaseRule}{\rulename{$\With$}}
 \newcommand{\ServerRule}{\rulename{server}}
 \newcommand{\ClientRule}{\rulename{client}}
-\newcommand{\WeakRule}{\rulename{weak}}
+\newcommand{\WeakenRule}{\rulename{weaken}}
+\newcommand{\ContractRule}{\rulename{contract}}
 \newcommand{\ChoiceRule}{\rulename{$\Choice[]{}{}$}}
 \newcommand{\ChoiceRuleAST}{\rulename{$\Choice[]{}{}$-ast}}
 \newcommand{\DistRule}{\rulename{distribution}}
@@ -290,21 +291,21 @@
 %%% ENVIRONMENTS %%%
 %%%%%%%%%%%%%%%%%%%%
 
-% \theoremstyle{plain}
-% \newtheorem{theorem}{Theorem}[section]
-% \newtheorem{lemma}{Lemma}[section]
-% \newtheorem{proposition}{Proposition}[section]
-% \newtheorem{corollary}{Corollary}[section]
+\theoremstyle{plain}
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{lemma}{Lemma}[section]
+\newtheorem{proposition}{Proposition}[section]
+\newtheorem{corollary}{Corollary}[section]
 
-% \theoremstyle{definition}
-% \newtheorem{definition}{Definition}[section]
-% \newtheorem{example}{Example}[section]
+\theoremstyle{definition}
+\newtheorem{definition}{Definition}[section]
+\newtheorem{example}{Example}[section]
 
-% \theoremstyle{remark}
-% \newtheorem{remark}{Remark}[section]
+\theoremstyle{remark}
+\newtheorem{remark}{Remark}[section]
 
-% \theoremstyle{remark}
-% \newtheorem{notation}[theorem]{Notation}
+\theoremstyle{remark}
+\newtheorem{notation}[theorem]{Notation}
 
 %%% Local Variables:
 %%% mode: latex
