--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -214,6 +214,8 @@
 \newcommand{\RStep}{\rulename{r-step}}
 \newcommand{\RComb}{\rulename{r-comb}}
 
+\newcommand\ReductionContext{\mathcal{C}}
+
 %%%%%%%%%%%%%%%%%%%
 %%% TYPE SYSTEM %%%
 %%%%%%%%%%%%%%%%%%%
